<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ga.vihanggarud.www.datapassbetweenactivities.MainActivity" android:orientation="vertical">

    <EditText
        android:id="@+id/nameOfPerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/nameOfPerson"
        android:inputType="textAutoCorrect"
        android:padding="20dp" />

    <EditText
        android:id="@+id/ageOfPerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/ageOfPerson"
        android:inputType="number"
        android:padding="20dp" />

    <RadioGroup
        android:id="@+id/genderOfPerson"
        android:layout_width="match_parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="50dp"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="25sp"/>

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="25sp"/>

        <RadioButton
            android:id="@+id/others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textSize="25sp"/>

    </RadioGroup>

    <Button
        android:id="@+id/popUpMenu"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/buttonColor"
        android:text="@string/popUpMenu" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/buttonColor"
            android:onClick="getDetails"
            android:text="@string/submitButton" />

    </RelativeLayout>

</LinearLayout>
